# mandelviewer

./: CMakeLists.txt  MandelBrot.cpp  MandelBrot.hpp  SFHelper.hpp  StatsBox.cpp  StatsBox.hpp  StatsEntry.cpp  StatsEntry.hpp  doxygen_config.txt  main.cpp
